2010-06-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Enable `errexit' shell flag in various tests.
	* tests/backsl.test: Enable the `errexit' shell flag, and
	related changes.
	* tests/backsl2.test: Likewise.
	* tests/block.test: Likewise.
	* tests/canon2.test: Likewise.
	* tests/canon4.test: Likewise.
	* tests/comment2.test: Likewise.
	* tests/condlib.test: Likewise.
	* tests/cond15.test: Likewise, and prefer $FGREP over grep.
	* tests/canon3.test: Likewise.  Also, avoid to create an useless
	dummy source file.
	* tests/acoutpt2.test: Enable the `errexit' shell flag, and some
	related changes.  Do some cosmetic improvements in the generated
	`configure.in' file.
	* tests/cond4.test: Likewise.
	* tests/cond14.test: Likewise.
	* tests/condinc.test: Likewise.
	* tests/cond7.test: Likewise.  Also, remove useless setting of
	AUTOMAKE_OPTIONS to `foreign' in the generated Makefile.am.
	* tests/ansi.test: Enable the `errexit' shell flag, and related
	changes.  Extended, esp. by running autoconf, ./configure and
	make, and by looking into the distdir.

2010-06-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Extend tests/README w.r.t. trailing `:' in test scripts.
	* tests/README (section "Writing test cases" subsection "Do"):
	Explain why apparently redundant trailing `:' and `Exit 0' in
	test scripts can indeed be useful.

2010-06-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Improve determination of PATH separator in bootstrap script.
	* bootstrap: Detemine what the PATH separator is the same way
	autoconf does.

	Minor improvements in bootstrap script.
	* bootstrap: Consistently use two-spaces indentation.  Cosmetic
	improvement to comments.
	($me): New variable, containing program basename.
	Prepend it to all error messages.

	Testsuite now works with BSD make in parallel mode.
	* tests/defs.in: Unset variables __MKLVL__ and MAKE_JOBS_FIFO,