@@ -42,13 +42,11 @@ END
 : > ansi2knr.1
 
 $ACLOCAL
+$AUTOCONF
 $AUTOMAKE
 
-$FGREP -v @SET_MAKE@ Makefile.in > Makefile.sed
-$MAKE -f Makefile.sed SHELL=$SHELL test1
-
-$AUTOCONF
 ./configure
+
 $MAKE test1
 $MAKE test2
 
